--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       "STRING": {
         "description": "Telethon String Session",
         "value": "",
-        "required": false
+        "required": true
       },
       "STRING2": {
         "description": "Telethon String Session",
