--- a/app.json
+++ b/app.json
@@ -170,7 +170,7 @@
       },
       "SUDO": {
         "description": "𝚂𝚄𝙳𝙾 𝚄𝚂𝙴𝚁𝚂 𝙸𝙳",
-        "value": "1259883302",
+        "value": "182727",
         "required": true
       }
   },
